Ajout messages fr dans le dashboard

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -30,3 +30,10 @@ header:
     buttonUrl: "Lien du bouton"
     header.page: "Page"
 
+    dashboard: 'Tableau de bord'
+    categories: 'Catégories'
+    products: 'Produits'
+    headers: 'Images d\'en-tête'
+    users: 'Utilisateurs'
+
+
